<resources>
    <string name="app_name">Trade Monitor</string>
    <string name="developer_write">Написать разработчику</string>
    <string name="developer_request">Вопрос по мобильному приложению Trade Monitor</string>
    <string name="back_pressed">Нажмите еще раз, чтобы выйти</string>
    <string name="add_collection">Добавить сборку</string>
    <string name="about">Написать разработчику</string>
    <string name="ok">OK</string>
    <string name="cancel1">Отмена</string>
    <string name="cancel2">Отменить</string>
    <string name="signin">Вход</string>
    <string name="signin_go">Вход выполнен</string>
    <string name="signin_stop">Вход НЕ выполнен. Тухлый токен</string>
    <string name="signin_signup">Вход / Регистрация</string>
    <string name="signup">Регистрация</string>
    <string name="signup_go_signin">Регистрация выполнена. Выполняю вход</string>
    <string name="logout_go">Выход выполнен</string>
    <string name="exit">Выход</string>
    <string name="save">Сохранить</string>
    <string name="menu">Меню</string>
    <string name="version">Версия</string>
    <string name="generals">Основные</string>
    <string name="systems">Системные</string>
    <string name="torch">Фонарик</string>
    <string name="collection">Сборка</string>
    <string name="money">руб</string>
    <string name="inserted">Добавлено</string>
    <string name="updated">Обновлено</string>
    <string name="updated_repository">Обновлено из репозитория</string>
    <string name="change">Изменить</string>
    <string name="insert_hand">Добавить вручную</string>
    <string name="sheet_1">Лист 1</string>
    <string name="rec_total">Записей всего</string>
    <string name="export_ch_zn">Экспорт в Честный Знак</string>
    <string name="marka">Марка</string>
    <string name="marka_type">Тип марки</string>
    <string name="scancode">Сканкод</string>
    <string name="scancode_type">Тип сканкода</string>
    <string name="cena">Цена</string>
    <string name="summa">Сумма</string>
    <string name="note">Примечание</string>
    <string name="name">Наименование</string>
    <string name="quantity">Количество</string>
    <string name="ed_izm">Единицы измерения</string>
    <string name="status">Статус</string>
    <string name="inn">ИНН</string>
    <string name="inn_enter">Введите ИНН</string>
    <string name="date">Дата</string>
    <string name="date_enter">Введите дату</string>
    <string name="withdrawal">Вывод</string>
    <string name="withdrawal_full">Вывод из оборота</string>
    <string name="packing">Фасовка</string>
    <string name="database_update">Идет обновление баз</string>
    <string name="goods_not_found">Товар не найден</string>
    <string name="from_server">От сервера</string>
    <string name="bad_scancod">Нестандартный сканкод</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="save_accound">Сохранить E-mail и пароль</string>
    <string name="is_informing">Информировать о новостях и изменениях</string>
    <string name="handle_personal_data">Даю свое согласие на обработку\nперсональных данных</string>
    <string name="lic_exp">Лицензия до</string>
    <string name="lic_trial">Пробная</string>
    <string name="lic_zero">Отсутствует</string>
    <string name="lic_base">Базовая</string>
    <string name="lic_empty">Не определена</string>
    <string name="dev_mob">Мобильные</string>
    <string name="dev_srv">Серверы</string>
    <string name="price">Прайс</string>
    <string name="from">от</string>
    <string name="and">и</string>
    <string name="search">Поиск</string>
    <string name="search_view_hint">Скан или Название</string>
    <string name="work_mode">Режим работы</string>
    <string name="stage_copy">Копирование</string>
    <string name="stage_unpack">Распаковка</string>
    <string name="stage_public">Публикация</string>
    <string name="download">Загрузить</string>
    <string name="downloaded">Загружен</string>
    <string name="clear">Очистить</string>
    <string name="empty">Отсутствует</string>
    <string name="start">Старт</string>
    <string name="finish">Завершение</string>
    <string name="info">Инфо</string>
    <string name="cancel_download">Отменить загрузку</string>
    <string name="delete_files">Удалить файлы</string>
    <string name="offlsource_download_success">OFF-Line источник загружен успешно</string>
    <string name="offlsource_download_unsuccess">OFF-Line источник загружен не полностью</string>
    <string name="offlsource_download_request">Загрузить OFF-Line источник?</string>
    <string name="current">Текущий</string>
    <string name="variants">Варианты</string>
    <string name="object_select">Выбор объекта</string>
    <string name="apply_current">Сделать текущим</string>
    <string name="begin_export_in">Начать экспорт в</string>
    <string name="wait">ждите …</string>
    <string name="settings">Настройки</string>
    <string name="settings_app">В настройки приложения</string>
    <string name="info_empty_export_format">Выбранный формат для экспорта не предусмотрен в данном архиве</string>
    <string name="info_password">Не менее 8 символов</string>
    <string name="info_need_registration">Для использования необходимо \"Войти\" или \"Зарегистрироваться\"</string>
    <string name="info_scan_or_write">Сканируйте или введите вручную</string>
    <string name="info_length_2">Не менее 2 символов</string>
    <string name="info_server_my">Теперь можно изменить настройки сервера лицензирования</string>
    <string name="info_server_my_hide">Настройки сервера лицензирования скрыты</string>
    <string name="error">Ошибка</string>
    <string name="error_in">Ошибка в</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_root_fragment_id">Id корневого фрагмента не определен</string>
    <string name="error_parent_coll">Сборка не определена</string>
    <string name="error_scancode">! Сканкод</string>
    <string name="error_scancode_search">Сканкод для поиска не определен</string>
    <string name="error_clear_file">Невозможно очистить файл, вероятно, он занят другим приложением</string>
    <string name="error_create_file">Невозможно создать файл</string>
    <string name="error_export_file_format">Формат файла для экспорта не определен</string>
    <string name="error_alko_mark">Информация о марке не определена</string>
    <string name="error_withdrawal_type">Не определен тип вывода из оборота</string>
    <string name="error_response_body">Тело ответа не определено. Попробуйте повторить запрос</string>
    <string name="error_response_status">Статус ответа не определен</string>
    <string name="error_сonnect">Нет связи. Проверьте соединение с Интернетом</string>
    <string name="error_ssl_unverified">SSL верификация не выполнена</string>
    <string name="error_tab_handler">Не найден обработчик для вкладки</string>
    <string name="error_unauthorized">Запрос не авторизован сервером</string>
    <string name="error_email">Проверьте правильность указанного E-mail</string>
    <string name="error_password">Проверьте правильность указанного пароля. Пароль должен содержать не менее 8 символов</string>
    <string name="error_handshake">Протокол-handshake не выполнен. Проверьте правильность указания адреса сервера</string>
    <string name="error_unknown_host">Неизвестный хост. Проверьте правильность указания адреса сервера</string>
    <string name="error_interrupted_io">Сервер не ответил. Проверьте правильность указания адреса сервера</string>
    <string name="error_timeout">Сервер не ответил за отведенное время. Повторите запрос позднее</string>
    <string name="error_not_200">Код ответа не 200. Попробуйте повторить запрос</string>
    <string name="error_header_subheaders_not_found">В заголовке ответа не обнаружены нужные подзаголовки. Попробуйте повторить запрос</string>
    <string name="error_header_parametr">В заголовке значение параметра не определено</string>
    <string name="error_folder_create">Не могу создать папку(и)</string>
    <string name="error_file_delete">Не могу удалить файл(ы)</string>
    <string name="error_file_not_found">Файл не найден</string>
    <string name="error_folder_not_found">Папка не найдена</string>
    <string name="error_offlbase_not_found">Off-Line базы не найдены на сервере</string>
    <string name="error_offlbase_not_ready">Off-Line базы не готовы к использованию</string>
    <string name="error_offlbase_oops">Оопс. Что-то пошло не так. Подробности в окне загрузки</string>
    <string name="error_content_type">Content-Type не соответствует ожидаемому. Попробуйте повторить запрос</string>
    <string name="error_file_size">Размер полученного файла не соответствует ожидаемому. Попробуйте повторить запрос</string>
    <string name="error_arc_file">Не определен файл для распаковки</string>
    <string name="error_folder_unzip">Не определена папка с распакованными файлами</string>
    <string name="error_folder_publish">Не определена папка с опубликованными файлами</string>
    <string name="error_server_loc">Адрес Сервера Локального не определен. Перейдите в Настройки и установите адрес</string>
    <string name="attention">Внимание</string>
    <string name="attention_cameras">Действующие камеры на устройстве не обнаружены</string>
    <string name="notification_name_offline">Загрузка источника</string>
    <string name="notification_description_offline">Индикатор обработки offline-источника (баз данных)</string>
    <string name="need_fill_fields">Необходимо заполнить поля</string>
    <string name="need_permissions_title">Отсутствуют разрешения</string>
    <string name="need_permissions_message">Для работы приложения необходимы все запрашиваемые разрешения. Добавить отсутствующие разрешения можно в настройках приложения</string>
    <string name="scan_message">Сканирование\nПоместите сканкод в центр прямоугольника</string>
    <string name="scan_message_list">Непрерывное сканирование\nСканируйте поочередно</string>
    <string name="monitor_price_label">Товары и Цены</string>
    <string name="monitor_price_call">Сборки товаров и цен</string>
    <string name="monitor_alko_label">Маркировка</string>
    <string name="monitor_alko_call">Сборки марок</string>
    <string name="monitor_checker_label">Прайс-Чекер</string>
    <string name="monitor_checker_call">Прайс-Чекер</string>
    <string name="monitor_object_label">Торговые объекты</string>
    <string name="monitor_offlsource_label">OFF-Line источник</string>
    <string name="coll_created">Сборка создана</string>
    <string name="coll_changed">Сборка изменена</string>
    <string name="coll_add_title">Добавление сборки</string>
    <string name="coll_add_message">Дабавить пустую сборку</string>
    <string name="coll_del_title">Удаление сборки</string>
    <string name="coll_del_message">Удалить сборку</string>
    <string name="goods_del_title">Удаление товара</string>
    <string name="goods_del_message">Удалить товар</string>
    <string name="marka_del_title">Удаление марки</string>
    <string name="marka_del_message">Удалить марку</string>
    <string name="ed_sht">шт</string>
    <string name="ed_kg">кг</string>
    <string name="conn">Подключения</string>
    <string name="conn_server_loc">Сервер Локальный</string>
    <string name="conn_server_license">Сервер Лицензирования</string>
    <string name="work_mode_offline">Автономно (OFF-Line)</string>
    <string name="weight_goods">Весовой товар</string>
    <string name="entry_weight_prefix">Префикс весового товара</string>
    <string name="barcode_autocorrection">Автокоррекция баркода</string>
    <string name="export">Экспорт</string>
    <string name="export_file_format_title">Формат файла для экспорта</string>
    <string name="export_file_format_excel">Excel</string>
    <string name="devices">Устройства</string>
    <string name="entry_scanner_title">Встроенный сканер</string>
</resources>