<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/conn"
        app:icon="@drawable/img_connection_24">

        <EditTextPreference
            android:title="@string/conn_server_loc"
            android:key="conn_server_loc"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/work_mode"
        app:icon="@drawable/img_mode_24">

        <SwitchPreference
            android:title="@string/work_mode_offline"
            android:defaultValue="false"
            android:key="work_mode_offline" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/weight_goods"
        app:icon="@drawable/img_scale_24">

        <EditTextPreference
            android:title="@string/entry_weight_prefix"
            android:key="weight_prefix"
            android:defaultValue="99"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/scancode"
        app:icon="@drawable/img_scanner_qr_24">

        <SwitchPreference
            android:title="@string/barcode_autocorrection"
            android:defaultValue="true"
            android:key="barcode_autocorrection" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/export"
        app:icon="@drawable/img_share_24">

        <ListPreference
            app:title="@string/export_file_format_title"
            app:key="export_file_format"
            app:defaultValue="excel"
            app:entries="@array/export_file_format_entries"
            app:entryValues="@array/export_file_format_values"
            app:negativeButtonText="@string/cancel1"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/devices"
        app:icon="@drawable/img_devices_24">

        <ListPreference
            app:title="@string/entry_scanner_title"
            app:key="scanner"
            app:defaultValue="empty"
            app:entries="@array/scanner_entries"
            app:entryValues="@array/scanner_values"
            app:negativeButtonText="@string/cancel1"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
