<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/generals">
        <menu>
            <item
                android:id="@+id/navMenuMenu"
                android:icon="@drawable/img_menu_24"
                android:title="@string/menu"/>
        </menu>
    </item>

    <item android:title="@string/systems">
        <menu>
            <item
                android:id="@+id/navMenuSettings"
                android:icon="@drawable/img_settings_24"
                android:title="@string/settings"/>
            <item
                android:id="@+id/navMenuExit"
                android:icon="@drawable/img_door_24"
                android:title="@string/exit"/>
        </menu>
    </item>


</menu>